Design detail-not-logged, detail-logged and message to host pages

--- a/detail-not-logged.html
+++ b/detail-not-logged.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="detail-logged-page">
+<body class="detail-logged-page detail-not-logged-page">
     <!--header section start-->
     <header class="fixed-top">
         <img class="w-100 menu-bg" src="images/menu-bg.svg" alt="bg" />
@@ -542,12 +542,14 @@
                         <div class="position-wrapper">
                             <div class="position-header">
                                 <img src="images/position-icon.png" alt="position">
-                                <p class="address">Via della Via paese della vai</p>
+                                <a href="#">
+                                    <p class="address">Via della Via paese della vai</p>
+                                </a>
                             </div>
                             <img class="divider mt-3" src="images/position-divider.png" alt="divider" />
                             <div class="position-body">
                                 <h4>Posizione</h4>
-                                <img class="position-img" src="images/position.png" alt="">
+                                <img class="position-img" src="images/position-not-loged.png" alt="position">
                                 <h4 class="position-ttl">Dettagli sul processo di prenotazione e pagamento</h4>
                                 <p>Il et milles as magnate pre sam quas ducidit etur sequiat ibusda qui atent ipiscimint
                                     fuga. Adio omnis con pelent licilia tianimus, videlit et es verrovit harum quo mil
@@ -715,7 +717,7 @@
                                     <textarea class="form-control"
                                         placeholder="Scrivi qui li tuo messaggio."></textarea>
                                 </div>
-                                <div class="d-flex justify-content-end action-btn">
+                                <div class="d-flex justify-content-center justify-content-sm-end action-btn">
                                     <button type="button" class="btn btn-secondary">Annulla</button>
                                     <button type="button" class="btn btn-outline-primary">invia messaggio</button>
                                 </div>
