--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
                 </div>
             </div>
         </div>
+        <div class="col-7 col-sm-3 col-lg-2 mt-5 space-btn">
+            <a class="read-more" href="#" title="vedi tutte le categorie"><img src="images/more.svg">
+                <p>Vedi tutte le categorie</p>
+            </a>
+        </div>
     </section>
     <!--spazi section end-->
 
