[index.html] h2 added in spazi

--- a/index.html
+++ b/index.html
@@ -128,7 +128,10 @@
             <div class="text-center">
                 <h2 class="section-ttl text-body">Gli spazi</h2>
             </div>
-            <div class="row justify-content-center">
+            <p class="text-center text-body section-subttl">Gendund usdanis restis eaqui ullutem porpore sin cusam eost
+                quatio. It esciument assitat aut ea volupta
+                commodion porerro mo odipisi taquibus pra derume.</p>
+            <div class="row justify-content-center mt-5">
                 <div class="spazi-tile col-6 col-md-4 col-lg-2">
                     <a href="#">
                         <img class="m-auto spazi-img" src="images/photo.png" alt="photo" />
