--- a/detail-logged.html
+++ b/detail-logged.html
@@ -110,8 +110,13 @@
                     <div class="d-flex align-items-center review-wrapper">
                         <img class="review" src="images/star.svg" alt="star">
                         <h5 class="review-count">4.5</h5>
-                        <img class="heart" src="images/heart-fill.png" alt="heart">
-                        <a class="fvt-btn" href="#">Aggiungi ai preferiti</a>
+                        <div class="wishlist-btn">
+                            <input type="checkbox" name="wishlist" id="wishlist">
+                            <label class="fvt-btn" for="wishlist">
+                                <span class="label1">Aggiungi ai preferiti</span>
+                                <span class="label2">rimuovi dai preferiti</span>
+                            </label>
+                        </div>
                     </div>
                     <div class="activities-wrapper">
                         <h3 class="activities-title">Attività</h3>
@@ -563,40 +568,46 @@
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <div class="booking-form-wrapper">
+                    <div class="booking-form-wrapper d-none d-sm-block">
                         <h5 class="booking-form-ttl">A partira da <span>160 € l'ora</span> </h5>
                         <form class="row booking-form">
-                            <div class="mb-4 col-12 px-0">
+                            <div class="mb-3 col-12 px-0">
                                 <label for="pianificando" class="form-label">Cosa stai pianificando?</label>
                                 <input type="text" class="form-control" id="pianificando">
                             </div>
-                            <div class="mb-4 col-4 px-0">
-                                <label for="date" class="form-label">Data</label>
-                                <input type="date" class="form-control" id="date">
-                            </div>
-                            <div class="mb-4 col-4 px-0">
-                                <label for="date" class="form-label">Orario inizio</label>
-                                <select class="form-control form-select" aria-label="Default select example">
-                                    <option selected>9:00</option>
-                                    <option value="1">9:30</option>
-                                    <option value="2">10:00</option>
-                                    <option value="3">10:30</option>
-                                </select>
-                            </div>
-                            <div class="mb-4 col-4 px-0">
-                                <label for="date" class="form-label">Orario fine</label>
-                                <select class="form-control form-select" aria-label="Default select example">
-                                    <option selected>21:00</option>
-                                    <option value="1">21:30</option>
-                                    <option value="2">22:00</option>
-                                    <option value="3">22:30</option>
-                                </select>
+                            <div class="time-slot-wrapper">
+                                <div class="mb-3 time-slot-tile px-0">
+                                    <label for="date" class="form-label">Data</label>
+                                    <input type="date" class="form-control" id="date">
+                                </div>
+                                <div class="mb-3 time-slot-tile px-0">
+                                    <label for="date" class="form-label">Orario inizio</label>
+                                    <select class="form-control form-select" aria-label="Default select example">
+                                        <option selected>9:00</option>
+                                        <option value="1">9:30</option>
+                                        <option value="2">10:00</option>
+                                        <option value="3">10:30</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3 time-slot-tile d-none px-0">
+                                    <label for="date" class="form-label">Data</label>
+                                    <input type="date" class="form-control" id="date">
+                                </div>
+                                <div class="mb-3 time-slot-tile px-0">
+                                    <label for="date" class="form-label">Orario fine</label>
+                                    <select class="form-control form-select" aria-label="Default select example">
+                                        <option selected>21:00</option>
+                                        <option value="1">21:30</option>
+                                        <option value="2">22:00</option>
+                                        <option value="3">22:30</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="col-12 pe-0 form-check">
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                 <label class="form-check-label" for="exampleCheck1">più giorni</label>
                             </div>
-                            <div class="col-sm-8 mb-4 px-0">
+                            <div class="col-sm-8 mb-3 px-0">
                                 <label for="floatingInput" class="form-label">Numero ospiti</label>
                                 <div class="input-group">
                                     <input type="number" name="quantity" max="" class="form-control" id="floatingInput"
@@ -605,7 +616,7 @@
                                     <input type="button" value="-" class="button-minus" data-field="quantity">
                                 </div>
                             </div>
-                            <div class="mb-4 col-12 px-0">
+                            <div class="mb-3 col-12 px-0">
                                 <label for="coupon" class="form-label">Possiedi un coupon?</label>
                                 <input type="text" class="form-control" id="coupon">
                             </div>
@@ -616,16 +627,111 @@
                                     <h4>1920,00 €</h4>
                                 </div>
                             </div>
-                            <div class="mb-4 col-12 px-0">
+                            <div class="mb-3 col-12 px-0">
                                 <label for="message" class="form-label">invia un messaggio all'host</label>
                                 <textarea class="form-control" name="message" id="message"></textarea>
                             </div>
-                            <div class="mb-4 col-12 px-0 action-btn">
+                            <div class="mb-3 col-12 px-0 action-btn">
                                 <button type="button" class="btn btn-secondary">invia richiesta prenotazione</button>
                                 <button type="button" data-bs-toggle="modal" data-bs-target="#message-popup"
                                     class="btn btn-secondary-outline">Contatta L'host</button>
                             </div>
                         </form>
+                    </div>
+                    <!--form modal start-->
+                    <div class="modal fade" id="form-popup" tabindex="-1" aria-labelledby="form-popupLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="booking-form-wrapper">
+                                    <h5 class="booking-form-ttl">A partira da <span>160 € l'ora</span> </h5>
+                                    <form class="row booking-form">
+                                        <div class="mb-3 col-12 px-0">
+                                            <label for="pianificando" class="form-label">Cosa stai pianificando?</label>
+                                            <input type="text" class="form-control" id="pianificando">
+                                        </div>
+                                        <div class="time-slot-wrapper">
+                                            <div class="mb-3 time-slot-tile px-0">
+                                                <label for="date" class="form-label">Data</label>
+                                                <input type="date" class="form-control" id="date">
+                                            </div>
+                                            <div class="mb-3 time-slot-tile px-0">
+                                                <label for="date" class="form-label">Orario inizio</label>
+                                                <select class="form-control form-select"
+                                                    aria-label="Default select example">
+                                                    <option selected>9:00</option>
+                                                    <option value="1">9:30</option>
+                                                    <option value="2">10:00</option>
+                                                    <option value="3">10:30</option>
+                                                </select>
+                                            </div>
+                                            <div class="mb-3 time-slot-tile d-none px-0">
+                                                <label for="date" class="form-label">Data</label>
+                                                <input type="date" class="form-control" id="date">
+                                            </div>
+                                            <div class="mb-3 time-slot-tile px-0">
+                                                <label for="date" class="form-label">Orario fine</label>
+                                                <select class="form-control form-select"
+                                                    aria-label="Default select example">
+                                                    <option selected>21:00</option>
+                                                    <option value="1">21:30</option>
+                                                    <option value="2">22:00</option>
+                                                    <option value="3">22:30</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-12 pe-0 form-check">
+                                            <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                                            <label class="form-check-label" for="exampleCheck2">più giorni</label>
+                                        </div>
+                                        <div class="col-8 mb-3 px-0">
+                                            <label for="floatingInput" class="form-label">Numero ospiti</label>
+                                            <div class="input-group">
+                                                <input type="number" name="quantity" max="" class="form-control"
+                                                    id="floatingInput" placeholder="30">
+                                                <input type="button" value="+" class="button-plus"
+                                                    data-field="quantity">
+                                                <input type="button" value="-" class="button-minus"
+                                                    data-field="quantity">
+                                            </div>
+                                        </div>
+                                        <div class="mb-3 col-12 px-0">
+                                            <label for="coupon" class="form-label">Possiedi un coupon?</label>
+                                            <input type="text" class="form-control" id="coupon">
+                                        </div>
+                                        <div class="col-12 px-0 estimeted-price-wrapper">
+                                            <h4 class="estimeted-price-ttl">Prezzo stimato</h4>
+                                            <div class="estimeted-price">
+                                                <p>160 € X 12 ore</p>
+                                                <h4>1920,00 €</h4>
+                                            </div>
+                                        </div>
+                                        <div class="mb-3 col-12 px-0">
+                                            <label for="message" class="form-label">invia un messaggio all'host</label>
+                                            <textarea class="form-control" name="message" id="message"></textarea>
+                                        </div>
+                                        <div class="mb-3 col-12 px-0 action-btn">
+                                            <button type="button" class="btn btn-secondary">invia richiesta
+                                                prenotazione</button>
+                                            <button type="button" data-bs-toggle="modal" data-bs-target="#message-popup"
+                                                class="btn btn-secondary-outline">Contatta L'host</button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <!-- <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+                    <!--form modal end-->
+                    <div class="row mx-0 d-sm-none mbl-action-btn">
+                        <button type="button" data-bs-toggle="modal" data-bs-target="#form-popup"
+                            class="btn btn-secondary col-6">invia
+                            richiesta prenotazione</button>
+                        <button type="button" data-bs-toggle="modal" data-bs-target="#message-popup"
+                            class="btn btn-secondary-outline col-6">Contatta L'host</button>
                     </div>
                 </div>
             </div>
