--- a/profile-e-account.html
+++ b/profile-e-account.html
@@ -125,15 +125,17 @@
                                         <div class="col-md-7">
                                             <div class="form-tile">
                                                 <label for="name" class="form-label">Nome</label>
-                                                <input type="text" class="form-control" id="name">
+                                                <input type="text" class="form-control" id="name" placeholder="Nome">
                                             </div>
                                             <div class="form-tile">
                                                 <label for="cogname" class="form-label">Cogname</label>
-                                                <input type="text" class="form-control" id="cogname">
+                                                <input type="text" class="form-control" id="cogname"
+                                                    placeholder="Cogname">
                                             </div>
                                             <div class="form-tile">
                                                 <label for="datepicker" class="form-label">Data di nascita</label>
-                                                <input class="form-control" type="date" id="datepicker">
+                                                <input class="form-control" type="date" id="datepicker"
+                                                    placeholder="Data">
                                             </div>
                                         </div>
                                         <div class="col-md-5">
@@ -148,15 +150,16 @@
                                         <div class="col-md-7">
                                             <div class="form-tile">
                                                 <label for="residence" class="form-label">Residenza</label>
-                                                <input type="text" class="form-control" id="residence">
+                                                <input type="text" class="form-control" id="residence"
+                                                    placeholder="Residenza">
                                             </div>
                                             <div class="form-tile">
                                                 <label for="email" class="form-label">Email</label>
-                                                <input type="email" class="form-control" id="email">
+                                                <input type="email" class="form-control" id="email" placeholder="Email">
                                             </div>
                                             <div class="form-tile">
                                                 <label for="numero" class="form-label">Numero di telefono</label>
-                                                <input type="tel" class="form-control" id="numero">
+                                                <input type="tel" class="form-control" id="numero" placeholder="Numero">
                                             </div>
                                             <div class="form-tile">
                                                 <label for="activity" class="form-label">Attività prevalentemente
@@ -181,7 +184,8 @@
                                         <div class="col-md-7">
                                             <div class="form-tile">
                                                 <label for="msg" class="form-label">Presentazione</label>
-                                                <textarea class="form-control" name="message" id="msg"></textarea>
+                                                <textarea class="form-control" name="message" id="msg"
+                                                    placeholder="Presentazione"></textarea>
                                             </div>
                                         </div>
                                         <div class="col-md-5">
@@ -196,15 +200,17 @@
                                     <div class="col-md-7">
                                         <div class="form-tile">
                                             <label for="company-name" class="form-label">Nome dell'azienda</label>
-                                            <input type="text" class="form-control" id="company-name">
+                                            <input type="text" class="form-control" id="company-name"
+                                                placeholder="Nome dell'azienda">
                                         </div>
                                         <div class="form-tile">
                                             <label for="job-title" class="form-label">Job title</label>
-                                            <input type="text" class="form-control" id="job-title">
+                                            <input type="text" class="form-control" id="job-title"
+                                                placeholder="Job title">
                                         </div>
                                         <div class="form-tile">
                                             <label for="telefono" class="form-label">Numero di telefono</label>
-                                            <input type="tel" class="form-control" id="telefono">
+                                            <input type="tel" class="form-control" id="telefono" placeholder="Numero">
                                         </div>
                                         <div class="action-btn">
                                             <button type="button" class="btn btn-secondary">SALVA</button>
@@ -230,7 +236,8 @@
                                     <div class="col-md-7">
                                         <div class="form-tile">
                                             <label for="username" class="form-label">Nome utente</label>
-                                            <input type="text" class="form-control" id="username">
+                                            <input type="text" class="form-control" id="username"
+                                                placeholder="Nome utente">
                                         </div>
                                     </div>
                                     <h5 class="corporate-data-ttl">PIANI DI SPONSORIZZAZIONE DEGLI SPAZI</h5>
@@ -266,15 +273,18 @@
                                     <div class="col-md-7">
                                         <div class="form-tile">
                                             <label for="oldpassword" class="form-label">Vecchia Password</label>
-                                            <input type="password" class="form-control" id="oldpassword">
+                                            <input type="password" class="form-control" id="oldpassword"
+                                                placeholder="Vecchia Password">
                                         </div>
                                         <div class="form-tile">
                                             <label for="newpassword" class="form-label">Nuova Password</label>
-                                            <input type="password" class="form-control" id="newpassword">
+                                            <input type="password" class="form-control" id="newpassword"
+                                                placeholder="Nuova Password">
                                         </div>
                                         <div class="form-tile">
                                             <label for="confirmpassword" class="form-label">Conferma Password</label>
-                                            <input type="password" class="form-control" id="confirmpassword">
+                                            <input type="password" class="form-control" id="confirmpassword"
+                                                placeholder="Conferma Password">
                                         </div>
                                         <div class="action-btn">
                                             <button type="button" class="btn btn-secondary">Aggiorna Password</button>
@@ -302,11 +312,13 @@
                                             <div class="form-tile">
                                                 <label for="accountholder" class="form-label">Nome del titolare del
                                                     conto registrato</label>
-                                                <input type="text" class="form-control" id="accountholder">
+                                                <input type="text" class="form-control" id="accountholder"
+                                                    placeholder="accountholder">
                                             </div>
                                             <div class="form-tile">
                                                 <label for="nation" class="form-label">Nazione</label>
-                                                <input type="text" class="form-control" id="nation">
+                                                <input type="text" class="form-control" id="nation"
+                                                    placeholder="Nazione">
                                             </div>
                                         </div>
                                         <div class="col-md-5">
