Change input feilds style and css on e-profile page

--- a/profile-e-account.html
+++ b/profile-e-account.html
@@ -124,18 +124,28 @@
                                     <div class="row align-items-end">
                                         <div class="col-md-7">
                                             <div class="form-tile">
-                                                <label for="name" class="form-label">Nome</label>
-                                                <input type="text" class="form-control" id="name" placeholder="Nome">
+                                                <h6>Nome</h6>
+                                                <div class="form-floating">
+                                                    <input type="text" class="form-control" id="name"
+                                                        placeholder="Nome">
+                                                    <label for="name" class="form-label">Nome</label>
+                                                </div>
                                             </div>
                                             <div class="form-tile">
-                                                <label for="cogname" class="form-label">Cogname</label>
-                                                <input type="text" class="form-control" id="cogname"
-                                                    placeholder="Cogname">
+                                                <h6>Cogname</h6>
+                                                <div class="form-floating">
+                                                    <input type="text" class="form-control" id="cogname"
+                                                        placeholder="Cogname">
+                                                    <label for="cogname" class="form-label">Cogname</label>
+                                                </div>
                                             </div>
                                             <div class="form-tile">
-                                                <label for="datepicker" class="form-label">Data di nascita</label>
-                                                <input class="form-control" type="date" id="datepicker"
-                                                    placeholder="Data">
+                                                <h6>Data di nascita</h6>
+                                                <div class="form-floating">
+                                                    <input class="form-control" type="date" id="datepicker"
+                                                        placeholder="Data">
+                                                    <label for="datepicker" class="form-label">Data di nascita</label>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-md-5">
@@ -149,21 +159,31 @@
                                     <div class="row align-items-center">
                                         <div class="col-md-7">
                                             <div class="form-tile">
-                                                <label for="residence" class="form-label">Residenza</label>
-                                                <input type="text" class="form-control" id="residence"
-                                                    placeholder="Residenza">
+                                                <h6>Residenza</h6>
+                                                <div class="form-floating">
+                                                    <input type="text" class="form-control" id="residence"
+                                                        placeholder="Residenza">
+                                                    <label for="residence" class="form-label">Residenza</label>
+                                                </div>
                                             </div>
                                             <div class="form-tile">
-                                                <label for="email" class="form-label">Email</label>
-                                                <input type="email" class="form-control" id="email" placeholder="Email">
+                                                <h6>Email</h6>
+                                                <div class="form-floating">
+                                                    <input type="email" class="form-control" id="email"
+                                                        placeholder="Email">
+                                                    <label for="email" class="form-label">Email</label>
+                                                </div>
                                             </div>
                                             <div class="form-tile">
-                                                <label for="numero" class="form-label">Numero di telefono</label>
-                                                <input type="tel" class="form-control" id="numero" placeholder="Numero">
+                                                <h6>Numero di telefono</h6>
+                                                <div class="form-floating">
+                                                    <input type="tel" class="form-control" id="numero"
+                                                        placeholder="Numero">
+                                                    <label for="numero" class="form-label">Numero di telefono</label>
+                                                </div>
                                             </div>
                                             <div class="form-tile">
-                                                <label for="activity" class="form-label">Attività prevalentemente
-                                                    svolta</label>
+                                                <h6>Attività prevalentemente svolta</h6>
                                                 <select class="form-select form-control" name="activity" id="activity">
                                                     <option value="music">Music</option>
                                                     <option value="music">Teatro</option>
@@ -183,7 +203,7 @@
                                     <div class="row align-items-center">
                                         <div class="col-md-7">
                                             <div class="form-tile">
-                                                <label for="msg" class="form-label">Presentazione</label>
+                                                <h6>Presentazione</h6>
                                                 <textarea class="form-control" name="message" id="msg"
                                                     placeholder="Presentazione"></textarea>
                                             </div>
@@ -199,18 +219,28 @@
                                     <h5 class="corporate-data-ttl">dati aziendali</h5>
                                     <div class="col-md-7">
                                         <div class="form-tile">
-                                            <label for="company-name" class="form-label">Nome dell'azienda</label>
-                                            <input type="text" class="form-control" id="company-name"
-                                                placeholder="Nome dell'azienda">
+                                            <h6>Nome dell'azienda</h6>
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control" id="company-name"
+                                                    placeholder="Nome dell'azienda">
+                                                <label for="company-name" class="form-label">Nome dell'azienda</label>
+                                            </div>
                                         </div>
                                         <div class="form-tile">
-                                            <label for="job-title" class="form-label">Job title</label>
-                                            <input type="text" class="form-control" id="job-title"
-                                                placeholder="Job title">
+                                            <h6>Job title</h6>
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control" id="job-title"
+                                                    placeholder="Job title">
+                                                <label for="job-title" class="form-label">Job title</label>
+                                            </div>
                                         </div>
                                         <div class="form-tile">
-                                            <label for="telefono" class="form-label">Numero di telefono</label>
-                                            <input type="tel" class="form-control" id="telefono" placeholder="Numero">
+                                            <h6>Numero di telefono</h6>
+                                            <div class="form-floating">
+                                                <input type="tel" class="form-control" id="telefono"
+                                                    placeholder="Numero">
+                                                <label for="telefono" class="form-label">Numero di telefono</label>
+                                            </div>
                                         </div>
                                         <div class="action-btn">
                                             <button type="button" class="btn btn-secondary">SALVA</button>
@@ -235,9 +265,12 @@
                                 <form class="profile-update-form">
                                     <div class="col-md-7">
                                         <div class="form-tile">
-                                            <label for="username" class="form-label">Nome utente</label>
-                                            <input type="text" class="form-control" id="username"
-                                                placeholder="Nome utente">
+                                            <h6>Nome utente</h6>
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control" id="username"
+                                                    placeholder="Nome utente">
+                                                <label for="username" class="form-label">Nome utente</label>
+                                            </div>
                                         </div>
                                     </div>
                                     <h5 class="corporate-data-ttl">PIANI DI SPONSORIZZAZIONE DEGLI SPAZI</h5>
@@ -272,19 +305,29 @@
                                     <h5 class="corporate-data-ttl">cambio password</h5>
                                     <div class="col-md-7">
                                         <div class="form-tile">
-                                            <label for="oldpassword" class="form-label">Vecchia Password</label>
-                                            <input type="password" class="form-control" id="oldpassword"
-                                                placeholder="Vecchia Password">
+                                            <h6>Vecchia Password</h6>
+                                            <div class="form-floating">
+                                                <input type="password" class="form-control" id="oldpassword"
+                                                    placeholder="Vecchia Password">
+                                                <label for="oldpassword" class="form-label">Vecchia Password</label>
+                                            </div>
                                         </div>
                                         <div class="form-tile">
-                                            <label for="newpassword" class="form-label">Nuova Password</label>
-                                            <input type="password" class="form-control" id="newpassword"
-                                                placeholder="Nuova Password">
+                                            <h6>Nuova Password</h6>
+                                            <div class="form-floating">
+                                                <input type="password" class="form-control" id="newpassword"
+                                                    placeholder="Nuova Password">
+                                                <label for="newpassword" class="form-label">Nuova Password</label>
+                                            </div>
                                         </div>
                                         <div class="form-tile">
-                                            <label for="confirmpassword" class="form-label">Conferma Password</label>
-                                            <input type="password" class="form-control" id="confirmpassword"
-                                                placeholder="Conferma Password">
+                                            <h6>Conferma Password</h6>
+                                            <div class="form-floating">
+                                                <input type="password" class="form-control" id="confirmpassword"
+                                                    placeholder="Conferma Password">
+                                                <label for="confirmpassword" class="form-label">Conferma
+                                                    Password</label>
+                                            </div>
                                         </div>
                                         <div class="action-btn">
                                             <button type="button" class="btn btn-secondary">Aggiorna Password</button>
@@ -310,15 +353,21 @@
                                     <div class="row">
                                         <div class="col-md-7">
                                             <div class="form-tile">
-                                                <label for="accountholder" class="form-label">Nome del titolare del
-                                                    conto registrato</label>
-                                                <input type="text" class="form-control" id="accountholder"
-                                                    placeholder="accountholder">
+                                                <h6>Nome del titolare del conto registrato</h6>
+                                                <div class="form-floating">
+                                                    <input type="text" class="form-control" id="accountholder"
+                                                        placeholder="accountholder">
+                                                    <label for="accountholder" class="form-label">Nome del titolare del
+                                                        conto registrato</label>
+                                                </div>
                                             </div>
                                             <div class="form-tile">
-                                                <label for="nation" class="form-label">Nazione</label>
-                                                <input type="text" class="form-control" id="nation"
-                                                    placeholder="Nazione">
+                                                <h6>Nazione</h6>
+                                                <div class="form-floating">
+                                                    <input type="text" class="form-control" id="nation"
+                                                        placeholder="Nazione">
+                                                    <label for="nation" class="form-label">Nazione</label>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-md-5">
