--- a/magazine.html
+++ b/magazine.html
@@ -105,43 +105,115 @@
                     </div>
                 </div>
             </form>
+
+
+
             <div class="row magazine-tiles">
-                <div class="col-md-3 col-sm-6 order-md-1 order-sm-2 order-2 magazine-tile">
-                    <a href="#">
-                        <div class="magazine-img">
-                            <img src="images/magazine-img.svg" alt="magazine">
-                        </div>
-                        <div class="magazine-content">
-                            <img class="camera-icon" src="images/photo.png" alt="photo">
-                            <p class="magazine-ttl">CATEGORIA</p>
-                            <h6>Excepteur sint.</h6>
-                            <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
-                                pisicingelil.sedcloelusmodtempor
-                                incidiclunt li! labore et dolore magna ahque</p>
-                        </div>
-                    </a>
+
+              <div class="col-md-9 featured-articles">
+
+                <div class="row">
+
+                  <div class="col-md-4 col-sm-6 order-md-1 order-sm-2 order-2 magazine-tile">
+                      <a href="#">
+                          <div class="magazine-img">
+                              <img src="images/magazine-img.svg" alt="magazine">
+                          </div>
+                          <div class="magazine-content">
+                              <img class="camera-icon" src="images/photo.png" alt="photo">
+                              <p class="magazine-ttl">CATEGORIA</p>
+                              <h6>Excepteur sint.</h6>
+                              <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
+                                  pisicingelil.sedcloelusmodtempor
+                                  incidiclunt li! labore et dolore magna ahque</p>
+                          </div>
+                      </a>
+                  </div>
+
+
+                  <div class="col-md-8 col-sm-12 order-md-2 order-sm-1 order-1 magazine-main-tile">
+                      <div class="magazine-main-img">
+                          <img class="d-none d-sm-block" src="images/magazine-main.png" alt="magazine">
+                          <img class="d-sm-none" src="images/magazine-main-mbl.png" alt="magazine">
+                      </div>
+                      <div class="magazine-main-content">
+                          <a href="#">
+                              <img class="camera-icon" src="images/photo.png" alt="photo">
+                              <p class="magazine-ttl">CATEGORIA</p>
+                              <h6>Excepteur sint.</h6>
+                              <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
+                                  pisicingelil.sedcloelusmodtempor
+                                  incidiclunt li! labore et dolore magna ahque</p>
+                              <div class="name">
+                                  <img src="images/user.png" alt="user">
+                                  <a href="#"><span>di Mario Rossi</span></a>
+                              </div>
+                          </a>
+                      </div>
+                  </div>
+
                 </div>
-                <div class="col-md-6 col-sm-12 order-md-2 order-sm-1 order-1 magazine-main-tile">
-                    <div class="magazine-main-img">
-                        <img class="d-none d-sm-block" src="images/magazine-main.png" alt="magazine">
-                        <img class="d-sm-none" src="images/magazine-main-mbl.png" alt="magazine">
-                    </div>
-                    <div class="magazine-main-content">
-                        <a href="#">
-                            <img class="camera-icon" src="images/photo.png" alt="photo">
-                            <p class="magazine-ttl">CATEGORIA</p>
-                            <h6>Excepteur sint.</h6>
-                            <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
-                                pisicingelil.sedcloelusmodtempor
-                                incidiclunt li! labore et dolore magna ahque</p>
-                            <div class="name">
-                                <img src="images/user.png" alt="user">
-                                <a href="#"><span>di Mario Rossi</span></a>
-                            </div>
-                        </a>
-                    </div>
+
+
+                <div class="row">
+                  <div class="mt-md-5 order-sm-4 order-3">
+                      <div class="row">
+                          <div class="col-md-4 magazine-tile">
+                              <a href="#">
+                                  <div class="magazine-img">
+                                      <img src="images/magazine-img.svg" alt="magazine">
+                                  </div>
+                                  <div class="magazine-content">
+                                      <img class="camera-icon" src="images/photo.png" alt="photo">
+                                      <p class="magazine-ttl">CATEGORIA</p>
+                                      <h6>Excepteur sint.</h6>
+                                      <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
+                                          pisicingelil.sedcloelusmodtempor
+                                          incidiclunt li! labore et dolore magna ahque</p>
+                                  </div>
+                              </a>
+                          </div>
+                          <div class="col-md-4 magazine-tile">
+                              <a href="#">
+                                  <div class="magazine-img">
+                                      <img src="images/magazine-img.svg" alt="magazine">
+                                  </div>
+                                  <div class="magazine-content">
+                                      <img class="camera-icon" src="images/photo.png" alt="photo">
+                                      <p class="magazine-ttl">CATEGORIA</p>
+                                      <h6>Excepteur sint.</h6>
+                                      <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
+                                          pisicingelil.sedcloelusmodtempor
+                                          incidiclunt li! labore et dolore magna ahque</p>
+                                  </div>
+                              </a>
+                          </div>
+                          <div class="col-md-4 magazine-tile">
+                              <a href="#">
+                                  <div class="magazine-img">
+                                      <img src="images/magazine-img.svg" alt="magazine">
+                                  </div>
+                                  <div class="magazine-content">
+                                      <img class="camera-icon" src="images/photo.png" alt="photo">
+                                      <p class="magazine-ttl">CATEGORIA</p>
+                                      <h6>Excepteur sint.</h6>
+                                      <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
+                                          pisicingelil.sedcloelusmodtempor
+                                          incidiclunt li! labore et dolore magna ahque</p>
+                                  </div>
+                              </a>
+                          </div>
+                      </div>
+                  </div>
                 </div>
-                <div class="col-md-3 col-sm-6 order-md-3 order-sm-3 order-4 magazine-tile align-self-center">
+
+              </div>
+
+
+              <div class="col-md-3 aside">
+
+
+                <div class="order-md-3 order-sm-3 order-4 magazine-tile align-self-center">
                     <p class="news-ttl">BREAKING NEWS</p>
                     <div class="magazine-content">
                         <a href="#">
@@ -164,56 +236,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-9 col-sm-6 mt-md-5 order-sm-4 order-3">
-                    <div class="row">
-                        <div class="col-md-4 magazine-tile">
-                            <a href="#">
-                                <div class="magazine-img">
-                                    <img src="images/magazine-img.svg" alt="magazine">
-                                </div>
-                                <div class="magazine-content">
-                                    <img class="camera-icon" src="images/photo.png" alt="photo">
-                                    <p class="magazine-ttl">CATEGORIA</p>
-                                    <h6>Excepteur sint.</h6>
-                                    <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
-                                        pisicingelil.sedcloelusmodtempor
-                                        incidiclunt li! labore et dolore magna ahque</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4 magazine-tile">
-                            <a href="#">
-                                <div class="magazine-img">
-                                    <img src="images/magazine-img.svg" alt="magazine">
-                                </div>
-                                <div class="magazine-content">
-                                    <img class="camera-icon" src="images/photo.png" alt="photo">
-                                    <p class="magazine-ttl">CATEGORIA</p>
-                                    <h6>Excepteur sint.</h6>
-                                    <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
-                                        pisicingelil.sedcloelusmodtempor
-                                        incidiclunt li! labore et dolore magna ahque</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4 magazine-tile">
-                            <a href="#">
-                                <div class="magazine-img">
-                                    <img src="images/magazine-img.svg" alt="magazine">
-                                </div>
-                                <div class="magazine-content">
-                                    <img class="camera-icon" src="images/photo.png" alt="photo">
-                                    <p class="magazine-ttl">CATEGORIA</p>
-                                    <h6>Excepteur sint.</h6>
-                                    <p class="magazine-desc">Lorem,psumclolorsi1ame1, consectewr ad,
-                                        pisicingelil.sedcloelusmodtempor
-                                        incidiclunt li! labore et dolore magna ahque</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 order-5 magazine-tile">
+
+                <div class="order-5 magazine-tile">
                     <div class="magazine-content">
                         <a href="#">
                             <img class="camera-icon" src="images/film.png" alt="photo">
@@ -235,6 +259,8 @@
                         </a>
                     </div>
                 </div>
+
+              </div>
             </div>
         </div>
     </section>
@@ -244,6 +270,7 @@
     <section class="magazine-list-wrapper">
         <div class="container gx-5">
             <div class="row magazine-list-tiles">
+
                 <div class="col-md-6">
                     <a class="magazine-list-tile d-flex" href="#">
                         <div class="magazine-img">
@@ -259,6 +286,8 @@
                         </div>
                     </a>
                 </div>
+
+
                 <div class="col-md-6">
                     <a class="magazine-list-tile d-flex" href="#">
                         <div class="magazine-img">
