--- a/profile-e-account.html
+++ b/profile-e-account.html
@@ -94,8 +94,8 @@
                         <div class="row">
                             <div class="col-md-4 col-xl-3 text-center">
                                 <div class="profile-img">
-                                    <i class="fa fa-user-circle"></i>
-                                    <i class="fa fa-pen"></i>
+                                    <img class="user-img" src="images/user.png" alt="user">
+                                    <a href="#"><i class="fa fa-pen"></i></a>
                                 </div>
                                 <ul class="user-review-wrapper">
                                     <li>
