--- a/host-cancle-booking-page.html
+++ b/host-cancle-booking-page.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/cms.css">
 </head>
 
 <body class="cancle-booking-page">
